updates main page

--- a/src/main/templates/main/home.html
+++ b/src/main/templates/main/home.html
@@ -3,7 +3,7 @@
 <div class="section no-pad-bot" id="index-banner">
     <div class="container">
       <br><br>
-      <h1 class="header center orange-text">Acessibile, one video at a time</h1>
+      <h1 class="header center orange-text">Digitally inclusive, one video at a time</h1>
       <div class="row center">
         <h5 class="header col s12 light">Are you ready to help us create the biggest dataset on ASL video translation?</h5>
       </div>
@@ -38,7 +38,7 @@
             <h2 class="center light-blue-text"><i class="material-icons">group</i></h2>
             <h5 class="center">User-Centric Design</h5>
 
-            <p class="light">In order to solve this problem, we aim to place the user at the center of our research, developing solutions with them for them. Our goal is not to apply an interesting technology to X problem but to research how we can better solve a problem (Video translation in ASL) given our existing knowledge in a variety of fields. </p>
+            <p class="light">In order to solve this problem, our goal is research how we can better involve the deaf in solving their own translation limitations via the power of deep learning. </p>
           </div>
         </div>
 
