--- a/src/main/templates/main/includes/footer.html
+++ b/src/main/templates/main/includes/footer.html
@@ -3,7 +3,7 @@
   <div class="row">
     <div class="col l6 s12">
       <h5 class="white-text">ASL Platform (name pending)</h5>
-      <p class="grey-text text-lighten-4">We are a team of multidisciplinary researchers from leading universities and companies working on ASL <-> video translation and tagging using deep learning.</p>
+      <p class="grey-text text-lighten-4">We are a team of multidisciplinary students working towards better inclusivity using using deep learning.</p>
 
 
     </div>
@@ -18,16 +18,17 @@
     <div class="col l3 s12">
       <h5 class="white-text">Team</h5>
       <ul>
-        <li><a class="white-text" href="#!">Amanda Duarte</a></li>
-        <li><a class="white-text" href="#!">Xavier Giró</a></li>
+        <li><a class="white-text" href="#!">Eva Deltor</a></li>
+        <li><a class="white-text" href="#!"></a>Valeh Farzaliyev</li>
         <li><a class="white-text" href="#!">Jan Carbonell</a></li>
+        <li><a class="white-text" href="#!">Shivam Goraksha</a></li>
       </ul>
     </div>
   </div>
 </div>
 <div class="footer-copyright">
   <div class="container">
-  Made with ❤️ from <a class="black-text text-lighten-3" href="https://en.wikipedia.org/wiki/Barcelona">Barcelona</a> and <a class="black-text text-lighten-3" href="https://en.wikipedia.org/wiki/Pittsburgh">Pittsburgh</a>
+  Made with ❤️ from <a class="black-text text-lighten-3" href="https://en.wikipedia.org/wiki/Barcelona">Barcelona</a>, <a class="black-text text-lighten-3" href="https://en.wikipedia.org/wiki/Hamburg">Hamburg</a> and <a class="black-text text-lighten-3" href="https://en.wikipedia.org/wiki/Tallin">Tallin</a>
   </div>
 </div>
 </footer>
