--- a/src/main/templates/main/includes/footer.html
+++ b/src/main/templates/main/includes/footer.html
@@ -2,7 +2,7 @@
 <div class="container">
   <div class="row">
     <div class="col l6 s12">
-      <h5 class="white-text">ASL Platform (name pending)</h5>
+      <h5 class="white-text">ASL Texter</h5>
       <p class="grey-text text-lighten-4">We are a team of multidisciplinary students working towards better inclusivity using using deep learning.</p>
 
 
@@ -16,7 +16,7 @@
       </ul>
     </div> -->
     <div class="col l3 s12">
-      <h5 class="white-text">Team</h5>
+      <h5 class="white-text"> Our Team</h5>
       <ul>
         <li><a class="white-text" href="#!">Eva Deltor</a></li>
         <li><a class="white-text" href="#!"></a>Valeh Farzaliyev</li>
