--- a/src/main/templates/main/includes/navbar.html
+++ b/src/main/templates/main/includes/navbar.html
@@ -1,7 +1,7 @@
 {% block content %}
     <nav>
-        <div class="nav-wrapper blue darken-4">
-            <a href="/" class="brand-logo " style="padding-left: 20px;">ASL Platform</a>
+        <div class="nav-wrapper schwarz">
+            <a href="/" class="brand-logo " style="padding-left: 20px;">ASL Texter</a>
             <ul id="nav-mobile" class="right hide-on-med-and-down">
                 {% if user.is_authenticated %}
                      <li><a href="/account">{{user.username|title}}</a></li>
