--- a/src/main/templates/main/register.html
+++ b/src/main/templates/main/register.html
@@ -1,5 +1,6 @@
 {% extends 'main/base.html' %}
 {% block content %}
+<div class="dullgrey">
     <div class="container">
         <br>
         <form method="POST">
@@ -10,4 +11,5 @@
 
         If you already have an account <a href="/login" target="blank"><strong>login</strong></a> instead.
     </div>
+</div>
 {% endblock %}
