--- a/src/main/templates/main/base.html
+++ b/src/main/templates/main/base.html
@@ -3,9 +3,11 @@
     <head>
         {% load static %}
         <meta charset="UTF-8">
-        <title>Learning Django (again)</title>
+        <title>ASL Texter</title>
         <!-- Compiled and minified CSS -->
+
         <link rel="stylesheet" href="{% static 'main/css/materialize.css' %}">
+        <link href="https://fonts.googleapis.com/css?family=Oswald&display=swap" rel="stylesheet">
         <!-- Load customized CSS -->
         <link rel="stylesheet" href="{% static 'main/css/style.css' %}">
         <!-- Material Icons -->
@@ -13,6 +15,7 @@
       rel="stylesheet">
         <!-- Compiled and minified JavaScript -->
         <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/js/materialize.min.js"></script>
+        
     </head>
 
 
