--- a/src/main/templates/main/home.html
+++ b/src/main/templates/main/home.html
@@ -1,17 +1,21 @@
 {% extends 'main/base.html' %}
 {% block content %}
+<div class="dullgrey">
 <div class="section no-pad-bot" id="index-banner">
-    <div class="container">
+    <div class="container ">
       <br><br>
-      <h1 class="header center orange-text">Digitally inclusive, one video at a time</h1>
+      <h2 class="header center orange-text">Convert Sign Language to Text in realtime</h2>
       <div class="row center">
-        <h5 class="header col s12 light">Are you ready to help us create the biggest dataset on ASL video translation?</h5>
+        <h5 class="header">Are you ready?</h5>
       </div>
       <div class="row center">
-        <!--   TODO: Add further logic to redirect user to video platform if already authenticated   -->
-        <a href="/register" id="download-button" class="btn-large waves-effect waves-light orange">Register</a>
 
-        <a href="/login" id="download-button" class="btn-large waves-effect waves-light grey">Login</a>
+          <iframe width="560" height="315" src="https://www.youtube.com/embed/OWnPztWMpQc" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+      </div>
+      <div class ="row">
+          <!-- TODO: Add further logic to redirect user to video platform if already authenticated   -->
+        <div class="col s6"> <a href="/register" id="download-button" class="btn-large waves-effect waves-light orange">Register</a></div>
+        <div class="col s6"><a href="/login" id="download-button" class="btn-large waves-effect waves-light green">Login</a> </div>
       </div>
       <br><br>
 
@@ -20,7 +24,7 @@
 
 
   <div class="container">
-    <div class="section">
+    <div class="section ">
 
       <!--   Icon Section   -->
       <div class="row">
@@ -28,7 +32,7 @@
           <div class="icon-block">
             <h2 class="center light-blue-text"><i class="material-icons">flash_on</i></h2>
             <h5 class="center">Shortening the Gap</h5>
-
+ 
             <p class="light">There are around 466 million people worldwide have disabling hearing loss, with  34 million of these being children. This number is set to increase to up to 900 million by 2050. We are working on a solution to bridge the accesibility gap between this collective and videos, one of today's main formats of sharing information</p>
           </div>
         </div>
@@ -55,4 +59,5 @@
     </div>
     <br><br>
   </div>
+</div>
 {% endblock %}
