--- a/src/main/templates/main/login.html
+++ b/src/main/templates/main/login.html
@@ -1,7 +1,8 @@
 {% extends 'main/base.html' %}
 
 {% block content %}
-    <div class="container">
+
+    <div class="container dullgrey">
         <form method="POST">
         {% csrf_token %}
         {{form.as_p}}
