--- a/src/main/static/main/css/materialize.css
+++ b/src/main/static/main/css/materialize.css
@@ -4098,6 +4098,10 @@ body.keyboard-focused .dropdown-content li:focus {
 .waves-notransition {
   transition: none !important; }
 
+  .headAnimatorTitle {
+    animation-duration: 9s;
+  }
+
 .waves-circle {
   transform: translateZ(0);
   -webkit-mask-image: -webkit-radial-gradient(circle, white 100%, black 100%); }
