--- a/src/main/templates/main/base.html
+++ b/src/main/templates/main/base.html
@@ -9,6 +9,8 @@
         <link rel="stylesheet" href="{% static 'main/css/materialize.css' %}">
         <link href="https://fonts.googleapis.com/css?family=Oswald&display=swap" rel="stylesheet">
         <link href="https://fonts.googleapis.com/css?family=Dosis&display=swap" rel="stylesheet">
+        <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/3.7.2/animate.min.css">
+              
 
         <!-- Load customized CSS -->
         <link rel="stylesheet" href="{% static 'main/css/style.css' %}">
