--- a/src/main/templates/main/includes/footer.html
+++ b/src/main/templates/main/includes/footer.html
@@ -1,28 +1,24 @@
 <footer class="page-footer orangy">
 <div class="container">
   <div class="row">
-    <div class="col l6 s12">
+    <div class="col l4 s12">
       <h5 class="schwarz-text">ASL Texter</h5>
-      <p class="dullgrey-text">We are a team of multidisciplinary students working towards better inclusivity using using deep learning.</p>
+      <p class="creamy-text">We are a team of multidisciplinary students working towards better inclusivity using using deep learning.</p>
 
 
     </div>
-<!--     <div class="col l3 s12">
-      <h5 class="white-text">Settings</h5>
-      <ul>
-        <li><a class="white-text" href="#!">Link 1</a></li>
-        <li><a class="white-text" href="#!">Link 2</a></li>
-        <li><a class="white-text" href="#!">Link 3</a></li>
-      </ul>
-    </div> -->
-    <div class="col l3 s12">
+
+    <div class="col l8 s12">
       <h5 class="schwarz-text"> Our Team</h5>
-      <ul>
-        <li><a class="dullgrey-text" href="#!">Eva Deltor</a></li>
-        <li><a class="dullgrey-text" href="#!">Valeh Farzaliyev</a></li>
-        <li><a class="dullgrey-text" href="#!">Jan Carbonell</a></li>
-        <li><a class="dullgrey-text" href="#!">Shivam Goraksha</a></li>
-      </ul>
+
+      <div class="row">
+        <ul>
+          <div class="col s2"><li><a class="creamy-text" href="#!">Eva Deltor</a></li></div>
+          <div class="col s3"><li><a class="creamy-text" href="#!">Valeh Farzaliyev</a></li></div>
+          <div class="col s2"><li><a class="creamy-text" href="#!">Jan Carbonell</a></li></div>
+          <div class="col s3"><li><a class="creamy-text" href="#!">Shivam Goraksha</a></li></div>
+        </ul>  
+        </div>
     </div>
   </div>
 </div>
