--- a/src/main/templates/main/includes/navbar.html
+++ b/src/main/templates/main/includes/navbar.html
@@ -1,14 +1,16 @@
 {% block content %}
     <nav>
         <div class="nav-wrapper schwarz">
-            <a href="/" class="brand-logo " style="padding-left: 20px;">ASL Texter</a>
+            <a href="/" class="brand-logo creamy-text" style="padding-left: 20px;">ASL Texter</a>
             <ul id="nav-mobile" class="right hide-on-med-and-down">
+
+                
                 {% if user.is_authenticated %}
                      <li><a href="/account">{{user.username|title}}</a></li>
                      <li><a href="/logout">Logout</a></li>
                 {% else %}
-                    <li><a href="/login">Login</a></li>
-                    <li><a href="/register">Register</a></li>
+                    <!-- <li><a href="/login">Login</a></li>
+                    <li><a href="/register">Register</a></li> -->
                 {% endif %}
           </ul>
         </div>
