--- a/src/main/templates/main/base.html
+++ b/src/main/templates/main/base.html
@@ -19,7 +19,7 @@
       rel="stylesheet">
         <!-- Compiled and minified JavaScript -->
         <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/js/materialize.min.js"></script>
-        
+        <script src="https://embed.typeform.com/embed.js"></script>
     </head>
 
 
