--- a/src/main/templates/main/home.html
+++ b/src/main/templates/main/home.html
@@ -54,7 +54,7 @@
     
           </div>
       </div>
-     
+      <a id="next-btn" href="./form">START NOW</a>
       <div class="row">
         <!-- TODO: Add further logic to redirect user to video platform if already authenticated   -->
         <!-- <div class="col s12 center-align"> <a href="/register" id="download-button"
